# langdetect-rs

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md
examples/custom_profile/: main.rs
examples/extend_default/: main.rs
examples/simple/: main.rs
scripts/: README.md  generate_profiles.py  scrap_wiki.py
src/: detector.rs  detector_factory.rs  language.rs  lib.rs
src/utils/: lang_profile.rs  messages.rs  mod.rs  ngram.rs  unicode_block.rs
