[package]
name = "langdetect-rs"
version = "0.2.2"
edition = "2024"
description = "Language detection in Rust. Port of Mimino666's langdetect."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/LdDl/langdetect-rs"
documentation = "https://docs.rs/langdetect-rs"
homepage = "https://github.com/LdDl/langdetect-rs"
keywords = ["language", "nlp", "langdetect", "language-id", "text-processing"]

[dependencies]
lazy_static = "1.5.0"
rand = "0.9.2"
rand_distr = "0.5.1"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
